fix vscroll gap

--- a/src/popup.scss
+++ b/src/popup.scss
@@ -44,7 +44,7 @@ $star-color: #1da1f2;
 body {
   margin: 4px 0 0 0;
   margin-right: 0;
-  font-family: 'Helvetica Neue', Arial, 'Hiragino SansHiragino Kaku Gothic ProN', 'BIZ UDPGothic', Meiryo, sans-serif;
+  font-family: 'Helvetica Neue', 'Hiragino SansHiragino Kaku Gothic ProN', 'BIZ UDPGothic', Meiryo, sans-serif;
   font-size: 0.9em;
 }
 
@@ -910,6 +910,6 @@ input.query {
 
 .pane-title {
   font-style: oblique;
-  font-size: 0.9em;
+  font-size: 0.8em;
   padding-bottom: 3px;
 }
